[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
build = "build.rs"
edition = "2021"
exclude = ["artifacts.json", "index.node"]
license-file = "LICENSE"
name = "css_node"
publish = false
version = "0.1.0"

[lib]
bench = false
path = "Source/lib.rs"
crate-type = ["cdylib"]

[features]

[build-dependencies]
napi-build = { version = "2" }

[dependencies]
anyhow = "1"
napi = { version = "2", default-features = false, features = [
	"napi3",
	"serde-json",
] }
napi-derive = { version = "2", default-features = false, features = [
	"type-def",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swc_common = { version = "5.0.0", features = ["sourcemap", "diagnostic-serde"] }
swc_atoms = "3.0.0"
swc_css_ast = "5.0.0"
swc_css_codegen = "5.0.0"
swc_css_compat = "5.0.0"
swc_css_minifier = "5.0.0"
swc_css_modules = "5.0.0"
swc_css_parser = "5.0.0"
swc_css_visit = "5.0.0"
swc_error_reporters = "6.0.0"
swc_nodejs_common = "1.0.0"
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
