[package]
authors = ["Mathis Møller"]
build = "build.rs"
edition = "2021"
exclude = ["artifacts.json", "index.node"]
license = "Apache-2.0"
name = "linter_node"
publish = false
version = "0.1.0"

[lib]
bench = false
path = "Source/lib.rs"
crate-type = ["cdylib"]

[features]

[build-dependencies]
napi-build = { version = "2" }

[dependencies]
anyhow = "1"
napi = { version = "2", default-features = false, features = [
	"napi3",
	"serde-json",
] }
napi-derive = { version = "2", default-features = false, features = [
	"type-def",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swc_atoms = "2.0.0"
swc_common = { version = "1.0.0", features = ["diagnostic-serde"] }
swc_ecma_ast = "1.0.0"
swc_ecma_lints = "1.0.0"
swc_ecma_minifier = "1.0.3"
swc_ecma_parser = "1.0.1"
swc_ecma_transforms_base = "1.0.1"
swc_ecma_visit = "1.0.0"
swc_error_reporters = "2.0.0"
swc_nodejs_common = "1.0.0"
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
